--- a/unknown_z0zxqu.xkcd.json
+++ b/unknown_z0zxqu.xkcd.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_z0zxqu.xkcd",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_z0zxqu.xkcd",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565401172719,
-	"last_scraped": 1568824517479,
+	"last_scraped": 1568833305078,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568867200765,
+	"next_scrape": 1568877027682,
 	"category": "plant_sim",
-	"last_update": 1568824517479,
+	"last_update": 1568833305078,
 	"output": [
 		{
 			"args": {},
@@ -44,7 +44,7 @@
 		},
 		{
 			"args": {},
-			"calls": 105263,
+			"calls": 106971,
 			"base": "c:\"ajebl6\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"W ERR",
@@ -79,6 +79,6 @@
 			]
 		}
 	],
-	"updt": 1568816354122,
-	"edit": 117
+	"updt": 1568824702048,
+	"edit": 118
 }
