--- a/unknown_piriip.crack.json
+++ b/unknown_piriip.crack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_piriip.crack",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "unknown_piriip.crack",
 	"sector": "NGC_0026",
 	"sec_level": 1,
 	"date_added": 1558821408422,
-	"last_scraped": 1568829672076,
+	"last_scraped": 1568838016293,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1568821093418,
-	"edit": 27,
+	"updt": 1568829891286,
+	"edit": 28,
 	"pl_output": "Cannot read property 'call' of undefined",
-	"next_scrape": 1568915351002
+	"next_scrape": 1568926663814
 }
