--- a/unknown_0pkjh3.trust.json
+++ b/unknown_0pkjh3.trust.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_0pkjh3.trust",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0pkjh3.trust",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564357522436,
-	"last_scraped": 1568831198489,
+	"last_scraped": 1568839515525,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564357522436
 		}
 	],
-	"next_scrape": 1568875078737,
+	"next_scrape": 1568885504536,
 	"category": "dice_roller",
-	"last_update": 1568831198489,
+	"last_update": 1568839515525,
 	"output": [
 		{
 			"args": {},
-			"calls": 1857967,
+			"calls": 1872411,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"sy to",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568822896148,
-	"edit": 163
+	"updt": 1568831697272,
+	"edit": 164
 }
