--- a/unknown_wt9h2y.flush.json
+++ b/unknown_wt9h2y.flush.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_wt9h2y.flush",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "unknown_wt9h2y.flush",
 	"sector": "VNP_8719",
 	"sec_level": 2,
 	"date_added": 1563656292128,
-	"last_scraped": 1568833334117,
+	"last_scraped": 1568841716636,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,7 +14,7 @@
 		}
 	],
 	"pl_output": ":flush: 0\n{\"ok\":false,\"msg\":\"Your account balance of 0GC is too low to send 1GC.\"}",
-	"next_scrape": 1568912835323,
-	"updt": 1568824702048,
-	"edit": 136
+	"next_scrape": 1568931782281,
+	"updt": 1568833502701,
+	"edit": 137
 }
