--- a/uknown_pneesb.syslog.json
+++ b/uknown_pneesb.syslog.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_pneesb.syslog",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_pneesb.syslog",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564714810021,
-	"last_scraped": 1568835323007,
+	"last_scraped": 1568843455864,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 9,
-	"next_scrape": 1568878512820,
+	"next_scrape": 1568886453153,
 	"category": "plant_sim",
-	"last_update": 1568835323007,
+	"last_update": 1568843455864,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +50,7 @@
 		},
 		{
 			"args": {},
-			"calls": 138923,
+			"calls": 140479,
 			"base": "c:\"2fbkfi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"card t",
@@ -101,6 +101,6 @@
 			]
 		}
 	],
-	"updt": 1568826959414,
-	"edit": 159
+	"updt": 1568843427304,
+	"edit": 161
 }
