--- a/unknown_bgqmlc.list.json
+++ b/unknown_bgqmlc.list.json
@@ -46,9 +46,15 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"17A d",
+						"e afte",
+						"'s\\n21",
+						"tacker'",
 						"s\\n217A",
+						"ile aft",
 						"9 are s",
 						"o the at",
+						"attacker",
 						"A discar",
 						"acker's\\n"
 					]
@@ -78,9 +84,15 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"17A d",
+						"e afte",
+						"'s\\n21",
+						"tacker'",
 						"s\\n217A",
+						"ile aft",
 						"9 are s",
 						"o the at",
+						"attacker",
 						"A discar",
 						"acker's\\n"
 					]
@@ -110,9 +122,15 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"17A d",
+						"e afte",
+						"'s\\n21",
+						"tacker'",
 						"s\\n217A",
+						"ile aft",
 						"9 are s",
 						"o the at",
+						"attacker",
 						"A discar",
 						"acker's\\n"
 					]
@@ -124,16 +142,22 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
+				"17A d",
+				"e afte",
+				"'s\\n21",
+				"tacker'",
 				"s\\n217A",
+				"ile aft",
 				"9 are s",
 				"o the at",
+				"attacker",
 				"A discar",
 				"acker's\\n"
 			]
 		}
 	],
-	"updt": 1568623388007,
-	"edit": 29,
+	"updt": 1568687095488,
+	"edit": 30,
 	"retry_args": [
 		{
 			"CLICK": true
