--- a/unknown_857ztx.log.json
+++ b/unknown_857ztx.log.json
@@ -6,7 +6,7 @@
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565855292286,
-	"last_scraped": 1568843525227,
+	"last_scraped": 1568851303890,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568887795029,
+	"next_scrape": 1568895743414,
 	"category": "plant_sim",
-	"last_update": 1568843525227,
+	"last_update": 1568851303890,
 	"output": [
 		{
 			"args": {},
@@ -113,6 +113,22 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 1176,
+			"base": "c:\"yt4lgn\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã\n                ÃÃ\n                ",
+			"fragments": [
+				"ter i",
+				"aki s",
+				" USER",
+				"smirza",
+				"mirza ",
+				"yawaki ",
+				"mhollist",
+				"irza | S",
+				"USER mho"
+			]
 		}
 	],
 	"identified": [
@@ -131,6 +147,6 @@
 			]
 		}
 	],
-	"updt": 1568835533049,
-	"edit": 161
+	"updt": 1568843652684,
+	"edit": 162
 }
