--- a/uknown_9pb06p.data.json
+++ b/uknown_9pb06p.data.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_9pb06p.data",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_9pb06p.data",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568845927675,
+	"last_scraped": 1568853530742,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1568838013310,
-	"edit": 35,
+	"updt": 1568846136214,
+	"edit": 36,
 	"pl_output": "str.substr is not a function",
-	"next_scrape": 1568927230564
+	"next_scrape": 1568938672031
 }
