--- a/uknown_9pb06p.ls.json
+++ b/uknown_9pb06p.ls.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_9pb06p.ls",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_9pb06p.ls",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568848348457,
+	"last_scraped": 1568855952337,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,12 +21,12 @@
 			}
 		]
 	],
-	"updt": 1568840720075,
-	"edit": 294,
+	"updt": 1568848388823,
+	"edit": 295,
 	"output": [
 		{
 			"args": {},
-			"calls": 24761464,
+			"calls": 24950431,
 			"base": "uknown_9pb06p.ls { ls: <regex> }",
 			"fragments": [
 				"me pa",
@@ -69,11 +69,11 @@
 			]
 		}
 	],
-	"next_scrape": 1568891176744,
+	"next_scrape": 1568901066402,
 	"pl_output": "uknown_9pb06p.ls { ls: <regex> }",
 	"scrape_ct": 11,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568848348457,
+	"last_update": 1568855952337,
 	"old_output": "uknown_9pb06p.ls { ls: <regex> }",
 	"identified": [
 		{
