--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1568847866062,
+	"last_scraped": 1568855434659,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1568894589983,
+	"next_scrape": 1568897292815,
 	"category": "plant_sim",
-	"last_update": 1568847866062,
+	"last_update": 1568855434659,
 	"output": [
 		{
 			"args": {},
@@ -246,6 +246,23 @@
 				"ld bring",
 				", impres"
 			]
+		},
+		{
+			"args": {},
+			"calls": 890,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n\n            \n              Ã    _Á_\n            /Ã Á/Á/Á ÁÁ\n            ( Ã|Á\\ÃÁ'\n            ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -270,6 +287,6 @@
 			]
 		}
 	],
-	"updt": 1568840043869,
-	"edit": 76
+	"updt": 1568847938427,
+	"edit": 77
 }
