--- a/unknown_s65jzf.pay_respects.json
+++ b/unknown_s65jzf.pay_respects.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_s65jzf.pay_respects",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_s65jzf.pay_respects",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566471751373,
-	"last_scraped": 1568851253937,
+	"last_scraped": 1568858827608,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566471751373
 		}
 	],
-	"next_scrape": 1568893498297,
+	"next_scrape": 1568904842891,
 	"category": "plant_sim",
-	"last_update": 1568851253937,
+	"last_update": 1568858827608,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 138342,
+			"calls": 139018,
 			"base": "c:\"587sy1\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" see.",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1568843652684,
-	"edit": 179
+	"updt": 1568851317588,
+	"edit": 180
 }
