--- a/unknown_etjdee.render.json
+++ b/unknown_etjdee.render.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_etjdee.render",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_etjdee.render",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564168295048,
-	"last_scraped": 1568854535134,
+	"last_scraped": 1568861982451,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564168295048
 		}
 	],
-	"updt": 1568847034927,
-	"edit": 180,
-	"next_scrape": 1568894547506,
+	"updt": 1568854701547,
+	"edit": 181,
+	"next_scrape": 1568907427632,
 	"category": "plant_sim",
-	"last_update": 1568854535134,
+	"last_update": 1568861982451,
 	"output": [
 		{
 			"args": {},
@@ -236,7 +236,7 @@
 		},
 		{
 			"args": {},
-			"calls": 47519,
+			"calls": 48925,
 			"base": "c:\"5czxxn\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"r exa",
