--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -1,21 +1,21 @@
 {
 	"_id": "derelict_clrnxi.donate",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_clrnxi.donate",
 	"sector": "SPC_4267",
 	"sec_level": 4,
 	"date_added": 1565382488474,
-	"last_scraped": 1568855415072,
+	"last_scraped": 1568862937451,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565382488474
 		}
 	],
-	"next_scrape": 1568897840107,
+	"next_scrape": 1568903487045,
 	"category": "plant_sim",
-	"last_update": 1568855415072,
+	"last_update": 1568862937451,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 68938,
+			"calls": 70445,
 			"base": "c:\"wz0fyi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"7_FIL",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1568855377879,
-	"edit": 83
+	"updt": 1568855602391,
+	"edit": 84
 }
