--- a/uknown_kicz6i.k3y_cull.json
+++ b/uknown_kicz6i.k3y_cull.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_kicz6i.k3y_cull",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_kicz6i.k3y_cull",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562011754363,
-	"last_scraped": 1568855252779,
+	"last_scraped": 1568862775778,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562011754363
 		}
 	],
-	"next_scrape": 1568897764071,
+	"next_scrape": 1568906864856,
 	"category": "coin_flipper",
-	"last_update": 1568855252779,
+	"last_update": 1568862775778,
 	"output": [
 		{
 			"args": {},
-			"calls": 2964584,
+			"calls": 2981115,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"el li",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568847713817,
-	"edit": 287
+	"updt": 1568855377879,
+	"edit": 288
 }
