--- a/uknown_vcd79v.ez40.json
+++ b/uknown_vcd79v.ez40.json
@@ -6,20 +6,20 @@
 	"sector": "SPC_1857",
 	"sec_level": 4,
 	"date_added": 1566315754778,
-	"last_scraped": 1568862104146,
+	"last_scraped": 1568869123187,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566315754778
 		}
 	],
-	"next_scrape": 1568907389777,
+	"next_scrape": 1568909333425,
 	"category": "coin_flipper",
-	"last_update": 1568862104146,
+	"last_update": 1568869123187,
 	"output": [
 		{
 			"args": {},
-			"calls": 986365,
+			"calls": 1000336,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" by b",
@@ -76,6 +76,6 @@
 			]
 		}
 	],
-	"updt": 1568854701547,
-	"edit": 80
+	"updt": 1568862149391,
+	"edit": 81
 }
