--- a/uknown_pg7a89.q.json
+++ b/uknown_pg7a89.q.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_pg7a89.q",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_pg7a89.q",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1564862745653,
-	"last_scraped": 1568863095778,
+	"last_scraped": 1568870096048,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564862745653
 		}
 	],
-	"next_scrape": 1568906619215,
+	"next_scrape": 1568910497389,
 	"category": "coin_flipper",
-	"last_update": 1568863095778,
+	"last_update": 1568870096048,
 	"output": [
 		{
 			"args": {},
-			"calls": 1247906,
+			"calls": 1261834,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"OR | P",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1568855602391,
-	"edit": 109
+	"updt": 1568863276658,
+	"edit": 110
 }
