--- a/unknown_32snxj.mag.json
+++ b/unknown_32snxj.mag.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_32snxj.mag",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_32snxj.mag",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564690214907,
-	"last_scraped": 1568869557583,
+	"last_scraped": 1568876862971,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564690214907
 		}
 	],
-	"next_scrape": 1568911193449,
+	"next_scrape": 1568918543989,
 	"category": "plant_sim",
-	"last_update": 1568869557583,
+	"last_update": 1568876862971,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 63857,
+			"calls": 64960,
 			"base": "c:\"qta0g2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ible ",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1568862825381,
-	"edit": 74
+	"updt": 1568869588530,
+	"edit": 75
 }
