--- a/uknown_28mx3w.bot_scam_do_not_run.json
+++ b/uknown_28mx3w.bot_scam_do_not_run.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_28mx3w.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_28mx3w.bot_scam_do_not_run",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564555767749,
-	"last_scraped": 1568872585147,
+	"last_scraped": 1568879875240,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564555767749
 		}
 	],
-	"next_scrape": 1568914774750,
+	"next_scrape": 1568920274436,
 	"category": "coin_flipper",
-	"last_update": 1568872585147,
+	"last_update": 1568879875240,
 	"output": [
 		{
 			"args": {},
-			"calls": 2758120,
+			"calls": 2768246,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"that ",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1568865983898,
-	"edit": 266
+	"updt": 1568872746186,
+	"edit": 267
 }
