--- a/unknown_z24jxv.defend.json
+++ b/unknown_z24jxv.defend.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_z24jxv.defend",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_z24jxv.defend",
 	"sector": "VNP_1491",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1559965339482
+		},
+		{
+			"type": "died",
+			"when": 1568885992514
 		}
 	],
 	"next_scrape": 1568752302897,
@@ -142,8 +146,8 @@
 			]
 		}
 	],
-	"updt": 1568686642359,
-	"edit": 148,
+	"updt": 1568709883243,
+	"edit": 149,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
