--- a/uknown_1nprk1.keys.json
+++ b/uknown_1nprk1.keys.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_1nprk1.keys",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_1nprk1.keys",
 	"sector": "VNP_8704",
 	"sec_level": 4,
 	"date_added": 1566690183561,
-	"last_scraped": 1568886806709,
+	"last_scraped": 1568893493680,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566690183561
 		}
 	],
-	"next_scrape": 1568930942868,
+	"next_scrape": 1568937370740,
 	"category": "plant_sim",
-	"last_update": 1568886806709,
+	"last_update": 1568893493680,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 140146,
+			"calls": 140742,
 			"base": "c:\"v0gdlb\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"at sh",
@@ -83,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1568880679945,
-	"edit": 195
+	"updt": 1568887015996,
+	"edit": 196
 }
