--- a/uknown_ayqcsi.snowscan.json
+++ b/uknown_ayqcsi.snowscan.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.snowscan",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ayqcsi.snowscan",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568889015422,
+	"last_scraped": 1568895923791,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568882937255,
-	"edit": 204,
+	"updt": 1568889045479,
+	"edit": 205,
 	"output": [
 		{
 			"args": {},
-			"calls": 40345856,
+			"calls": 40529645,
 			"base": "`9User not recognized, aborting...`",
 			"fragments": [
 				"ser Er",
@@ -67,10 +67,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568935230796,
+	"next_scrape": 1568941027487,
 	"pl_output": "`9User not recognized, aborting...`",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568889015422,
+	"last_update": 1568895923791,
 	"old_output": "`9User not recognized, aborting...`",
 	"identified": [
 		{
