--- a/unknown_tffux6.db.json
+++ b/unknown_tffux6.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_tffux6.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_tffux6.db",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566124296849,
-	"last_scraped": 1568890305942,
+	"last_scraped": 1568897219495,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566124296849
 		}
 	],
-	"next_scrape": 1568932207105,
+	"next_scrape": 1568938419097,
 	"category": "dice_roller",
-	"last_update": 1568890305942,
+	"last_update": 1568897219495,
 	"output": [
 		{
 			"args": {},
-			"calls": 1115272,
+			"calls": 1128442,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ton a",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568884295029,
-	"edit": 101
+	"updt": 1568890396700,
+	"edit": 102
 }
