--- a/uknown_zfq3ba.binmat_bot.json
+++ b/uknown_zfq3ba.binmat_bot.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_zfq3ba.binmat_bot",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_zfq3ba.binmat_bot",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562032600019,
-	"last_scraped": 1568891130823,
+	"last_scraped": 1568898049275,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562032600019
 		}
 	],
-	"next_scrape": 1568936082734,
+	"next_scrape": 1568942098692,
 	"category": "dice_roller",
-	"last_update": 1568891130823,
+	"last_update": 1568898049275,
 	"output": [
 		{
 			"args": {},
-			"calls": 3496698,
+			"calls": 3506562,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"PRIAT",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1568884744503,
-	"edit": 341
+	"updt": 1568891298146,
+	"edit": 342
 }
