--- a/uknown_njenax.t1.json
+++ b/uknown_njenax.t1.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_njenax.t1",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_njenax.t1",
 	"sector": "HJG_0244",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561144306524
+		},
+		{
+			"type": "died",
+			"when": 1568900650969
 		}
 	],
 	"next_scrape": 1568941456732,
@@ -70,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1568891522403,
-	"edit": 325,
+	"updt": 1568898289851,
+	"edit": 326,
 	"identified": [
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
