--- a/unknown_9ocefk.db_query.json
+++ b/unknown_9ocefk.db_query.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_9ocefk.db_query",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_9ocefk.db_query",
 	"sector": "NGC_1514",
 	"sec_level": 4,
@@ -11,8 +11,12 @@
 		{
 			"type": "added",
 			"when": 1566365558640
+		},
+		{
+			"type": "died",
+			"when": 1568900801704
 		}
 	],
-	"updt": 1567726456329,
-	"edit": 3
+	"updt": 1568686417352,
+	"edit": 4
 }
