--- a/unknown_i8dzr5.il.json
+++ b/unknown_i8dzr5.il.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_i8dzr5.il",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_i8dzr5.il",
 	"sector": "K_1215",
 	"sec_level": 1,
@@ -19,10 +19,14 @@
 				"from": "K_1215",
 				"to": "HJG_7470"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1568900801704
+		}
 	],
-	"updt": 1568891072967,
-	"edit": 345,
+	"updt": 1568897840928,
+	"edit": 346,
 	"output": [
 		{
 			"args": {
