--- a/unknown_j1o9bp.big_red_button.json
+++ b/unknown_j1o9bp.big_red_button.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_j1o9bp.big_red_button",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_j1o9bp.big_red_button",
 	"sector": "HJG_4491",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560154185252
+		},
+		{
+			"type": "died",
+			"when": 1568900791924
 		}
 	],
 	"next_scrape": 1568939173310,
@@ -63,6 +67,6 @@
 			]
 		}
 	],
-	"updt": 1568889721857,
-	"edit": 301
+	"updt": 1568896936922,
+	"edit": 302
 }
