--- a/unknown_j1o9bp.chat.json
+++ b/unknown_j1o9bp.chat.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_j1o9bp.chat",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_j1o9bp.chat",
 	"sector": "K_4785",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565738922302
+		},
+		{
+			"type": "died",
+			"when": 1568900922573
 		}
 	],
 	"scrape_ct": 20,
@@ -130,8 +134,8 @@
 			]
 		}
 	],
-	"updt": 1568745344626,
-	"edit": 11,
+	"updt": 1568745571741,
+	"edit": 12,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
