--- a/unknown_9ocefk.scrape_t1.json
+++ b/unknown_9ocefk.scrape_t1.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_9ocefk.scrape_t1",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_9ocefk.scrape_t1",
 	"sector": "VNP_9228",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560272034818
+		},
+		{
+			"type": "died",
+			"when": 1568901094170
 		}
 	],
 	"next_scrape": 1568729044949,
@@ -142,8 +146,8 @@
 			]
 		}
 	],
-	"updt": 1567714945331,
-	"edit": 113,
+	"updt": 1568688899449,
+	"edit": 114,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
