--- a/unknown_jmk7tk.bot_scam_do_not_run.json
+++ b/unknown_jmk7tk.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_jmk7tk.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_jmk7tk.bot_scam_do_not_run",
 	"sector": "NGC_7203",
 	"sec_level": 4,
 	"date_added": 1566828439520,
-	"last_scraped": 1568896204795,
+	"last_scraped": 1568902715509,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568939606618,
+	"next_scrape": 1568944303926,
 	"category": "coin_flipper",
-	"last_update": 1568896204795,
+	"last_update": 1568902715509,
 	"output": [
 		{
 			"args": {},
-			"calls": 686963,
+			"calls": 709250,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttack",
@@ -130,6 +130,6 @@
 			]
 		}
 	],
-	"updt": 1568889270030,
-	"edit": 62
+	"updt": 1568896256860,
+	"edit": 63
 }
