--- a/unknown_yeqy10.loc.json
+++ b/unknown_yeqy10.loc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yeqy10.loc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_yeqy10.loc",
 	"sector": "VNP_9228",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560309305359
+		},
+		{
+			"type": "died",
+			"when": 1568907268945
 		}
 	],
 	"next_scrape": 1568948411523,
@@ -60,8 +64,8 @@
 			]
 		}
 	],
-	"updt": 1568899192502,
-	"edit": 349,
+	"updt": 1568905737354,
+	"edit": 350,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
