--- a/unknown_v602ar.distribute.json
+++ b/unknown_v602ar.distribute.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_v602ar.distribute",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_v602ar.distribute",
 	"sector": "NGC_5259",
 	"sec_level": 4,
 	"date_added": 1563305531375,
-	"last_scraped": 1568904412247,
+	"last_scraped": 1568910514598,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563305531375
 		}
 	],
-	"next_scrape": 1568949733974,
+	"next_scrape": 1568950540546,
 	"category": "dice_roller",
-	"last_update": 1568904412247,
+	"last_update": 1568910514598,
 	"output": [
 		{
 			"args": {},
-			"calls": 3180602,
+			"calls": 3188353,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t surp",
@@ -81,6 +81,6 @@
 			]
 		}
 	],
-	"updt": 1568898289851,
-	"edit": 304
+	"updt": 1568904609836,
+	"edit": 305
 }
