--- a/unknown_k8rbwr.loc.json
+++ b/unknown_k8rbwr.loc.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_k8rbwr.loc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_k8rbwr.loc",
 	"sector": "HJG_4601",
 	"sec_level": 4,
 	"date_added": 1566036024528,
-	"last_scraped": 1568909785504,
+	"last_scraped": 1568915862383,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566036024528
 		}
 	],
-	"next_scrape": 1568951421068,
+	"next_scrape": 1568958553518,
 	"category": "plant_sim",
-	"last_update": 1568909785504,
+	"last_update": 1568915862383,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 81653,
+			"calls": 83395,
 			"base": "c:\"ii4noy\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"tter i",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568903931395,
-	"edit": 110
+	"updt": 1568909796019,
+	"edit": 111
 }
