--- a/uknown_ax85yb.bot_scam_do_not_run.json
+++ b/uknown_ax85yb.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ax85yb.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ax85yb.bot_scam_do_not_run",
 	"sector": "SPC_0043",
 	"sec_level": 4,
 	"date_added": 1565687108587,
-	"last_scraped": 1568921114385,
+	"last_scraped": 1568926892446,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1568967569553,
+	"next_scrape": 1568972527507,
 	"category": "coin_flipper",
-	"last_update": 1568921114385,
+	"last_update": 1568926892446,
 	"output": [
 		{
 			"args": {},
-			"calls": 756006,
+			"calls": 769359,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" a th",
@@ -64,6 +64,6 @@
 			]
 		}
 	],
-	"updt": 1568915433097,
-	"edit": 79
+	"updt": 1568921297975,
+	"edit": 80
 }
