--- a/uknown_rubp2z.side.json
+++ b/uknown_rubp2z.side.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_rubp2z.side",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_rubp2z.side",
 	"sector": "K_0199",
 	"sec_level": 4,
 	"date_added": 1564014839075,
-	"last_scraped": 1568926074248,
+	"last_scraped": 1568932154104,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564014839075
 		}
 	],
-	"next_scrape": 1568967709748,
+	"next_scrape": 1568972713217,
 	"category": "plant_sim",
-	"last_update": 1568926074248,
+	"last_update": 1568932154104,
 	"output": [
 		{
 			"args": {},
@@ -83,7 +83,7 @@
 		},
 		{
 			"args": {},
-			"calls": 137982,
+			"calls": 140169,
 			"base": "c:\"xbk5u7\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" an A",
@@ -126,8 +126,8 @@
 			]
 		}
 	],
-	"updt": 1568920846837,
-	"edit": 193,
+	"updt": 1568932117909,
+	"edit": 195,
 	"identified": [
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
