--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -6,7 +6,7 @@
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1568933946124,
+	"last_scraped": 1568942442610,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568977188936,
+	"next_scrape": 1568988743184,
 	"category": "plant_sim",
-	"last_update": 1568933946124,
+	"last_update": 1568942442610,
 	"output": [
 		{
 			"args": {},
@@ -125,6 +125,18 @@
 				" ERROR ",
 				"X7BE4_FI"
 			]
+		},
+		{
+			"args": {},
+			"calls": 760,
+			"base": "c:\"51m589\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Á Ã\n                ÁÁ\n                ",
+			"fragments": [
+				"T0XF4_",
+				"ST ERR",
+				"LST0XC",
+				" ERROR ",
+				"X7BE4_FI"
+			]
 		}
 	],
 	"identified": [
@@ -139,6 +151,6 @@
 			]
 		}
 	],
-	"updt": 1568928513184,
-	"edit": 155
+	"updt": 1568934150371,
+	"edit": 156
 }
