--- a/uknown_jgxxsj.lib.json
+++ b/uknown_jgxxsj.lib.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_jgxxsj.lib",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_jgxxsj.lib",
 	"sector": "VNP_6819",
 	"sec_level": 4,
 	"date_added": 1561079926417,
-	"last_scraped": 1568934481780,
+	"last_scraped": 1568942915923,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561079926417
 		}
 	],
-	"next_scrape": 1568980890865,
+	"next_scrape": 1568983654342,
 	"category": "coin_flipper",
-	"last_update": 1568934481780,
+	"last_update": 1568942915923,
 	"output": [
 		{
 			"args": {},
-			"calls": 2528419,
+			"calls": 2545255,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"D but",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1568928963904,
-	"edit": 261
+	"updt": 1568934828173,
+	"edit": 262
 }
