--- a/uknown_xb5p8t.mud.json
+++ b/uknown_xb5p8t.mud.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xb5p8t.mud",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xb5p8t.mud",
 	"sector": "VNP_3290",
 	"sec_level": 4,
 	"date_added": 1564665103923,
-	"last_scraped": 1568940971027,
+	"last_scraped": 1568947977177,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564665103923
 		}
 	],
-	"next_scrape": 1568982547101,
+	"next_scrape": 1568990633358,
 	"category": "dice_roller",
-	"last_update": 1568940971027,
+	"last_update": 1568947977177,
 	"output": [
 		{
 			"args": {},
-			"calls": 1490474,
+			"calls": 1507536,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"of an",
@@ -134,6 +134,6 @@
 			]
 		}
 	],
-	"updt": 1568932568924,
-	"edit": 136
+	"updt": 1568941141308,
+	"edit": 137
 }
