--- a/uknown_rhkdnz.sortupgrades.json
+++ b/uknown_rhkdnz.sortupgrades.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_rhkdnz.sortupgrades",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_rhkdnz.sortupgrades",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1564761469085,
-	"last_scraped": 1568941132381,
+	"last_scraped": 1568948329222,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564761469085
 		}
 	],
-	"next_scrape": 1568985974077,
+	"next_scrape": 1568994915011,
 	"category": "coin_flipper",
-	"last_update": 1568941132381,
+	"last_update": 1568948329222,
 	"output": [
 		{
 			"args": {},
-			"calls": 1527956,
+			"calls": 1537340,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"u fou",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568932794607,
-	"edit": 133
+	"updt": 1568941141308,
+	"edit": 134
 }
