--- a/unknown_8xqncq.lights.json
+++ b/unknown_8xqncq.lights.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_8xqncq.lights",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_8xqncq.lights",
 	"sector": "VNP_5176",
 	"sec_level": 4,
 	"date_added": 1563964441642,
-	"last_scraped": 1568948399630,
+	"last_scraped": 1568954079904,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563964441642
 		}
 	],
-	"next_scrape": 1568991834018,
+	"next_scrape": 1568997796786,
 	"category": "dice_roller",
-	"last_update": 1568948399630,
+	"last_update": 1568954079904,
 	"output": [
 		{
 			"args": {},
-			"calls": 2593605,
+			"calls": 2615513,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ours.",
@@ -72,6 +72,6 @@
 			]
 		}
 	],
-	"updt": 1568941366292,
-	"edit": 248
+	"updt": 1568948581042,
+	"edit": 249
 }
