--- a/unknown_857ztx.log.json
+++ b/unknown_857ztx.log.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_857ztx.log",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_857ztx.log",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565855292286,
-	"last_scraped": 1568950994529,
+	"last_scraped": 1568956521291,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568992589235,
+	"next_scrape": 1569000495528,
 	"category": "plant_sim",
-	"last_update": 1568950994529,
+	"last_update": 1568956521291,
 	"output": [
 		{
 			"args": {},
@@ -116,7 +116,7 @@
 		},
 		{
 			"args": {},
-			"calls": 14548,
+			"calls": 15368,
 			"base": "c:\"yt4lgn\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã\n                ÃÃ\n                ",
 			"fragments": [
 				"ter i",
@@ -147,6 +147,6 @@
 			]
 		}
 	],
-	"updt": 1568943622100,
-	"edit": 177
+	"updt": 1568951064786,
+	"edit": 178
 }
