--- a/unknown_vhzebu.lights.json
+++ b/unknown_vhzebu.lights.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_vhzebu.lights",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_vhzebu.lights",
 	"sector": "VNP_0345",
 	"sec_level": 4,
 	"date_added": 1562511544007,
-	"last_scraped": 1568950953030,
+	"last_scraped": 1568956441134,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562511544007
 		}
 	],
-	"next_scrape": 1568991910693,
+	"next_scrape": 1568999845127,
 	"category": "dice_roller",
-	"last_update": 1568950953030,
+	"last_update": 1568956441134,
 	"output": [
 		{
 			"args": {},
-			"calls": 2942601,
+			"calls": 2953807,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s may",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1568943622100,
-	"edit": 303
+	"updt": 1568951064786,
+	"edit": 304
 }
