--- a/unknown_x4o7lb.deposit.json
+++ b/unknown_x4o7lb.deposit.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_x4o7lb.deposit",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_x4o7lb.deposit",
 	"sector": "NGC_1810",
 	"sec_level": 4,
 	"date_added": 1566601899177,
-	"last_scraped": 1568953379953,
+	"last_scraped": 1568959451956,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566601899177
 		}
 	],
-	"next_scrape": 1569000063548,
+	"next_scrape": 1569005720068,
 	"category": "dice_roller",
-	"last_update": 1568953379953,
+	"last_update": 1568959451956,
 	"output": [
 		{
 			"args": {},
-			"calls": 833492,
+			"calls": 844993,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"pe\":\"",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568948130111,
-	"edit": 70
+	"updt": 1568953543004,
+	"edit": 71
 }
