--- a/derelict_hynxc6.calendarscraper.json
+++ b/derelict_hynxc6.calendarscraper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_hynxc6.calendarscraper",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_hynxc6.calendarscraper",
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565503257030,
-	"last_scraped": 1568964905638,
+	"last_scraped": 1568970201098,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1569008693499,
+	"next_scrape": 1569015425016,
 	"category": "coin_flipper",
-	"last_update": 1568964905638,
+	"last_update": 1568970201098,
 	"output": [
 		{
 			"args": {},
-			"calls": 515961,
+			"calls": 530439,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e isn",
@@ -61,6 +61,6 @@
 			]
 		}
 	],
-	"updt": 1568959633014,
-	"edit": 48
+	"updt": 1568965047808,
+	"edit": 49
 }
