--- a/uknown_vcd79v.ez40.json
+++ b/uknown_vcd79v.ez40.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_vcd79v.ez40",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_vcd79v.ez40",
 	"sector": "SPC_1857",
 	"sec_level": 4,
 	"date_added": 1566315754778,
-	"last_scraped": 1568970453603,
+	"last_scraped": 1568970502676,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566315754778
 		}
 	],
-	"next_scrape": 1569012197169,
+	"next_scrape": 1569010796940,
 	"category": "coin_flipper",
-	"last_update": 1568970453603,
+	"last_update": 1568970502676,
 	"output": [
 		{
 			"args": {},
-			"calls": 1150490,
+			"calls": 1162468,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" by b",
@@ -76,6 +76,6 @@
 			]
 		}
 	],
-	"updt": 1568965271942,
-	"edit": 97
+	"updt": 1568970462002,
+	"edit": 98
 }
