--- a/unknown_ajhomk.sh.json
+++ b/unknown_ajhomk.sh.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ajhomk.sh",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ajhomk.sh",
 	"sector": "K_7542",
 	"sec_level": 4,
 	"date_added": 1561468558289,
-	"last_scraped": 1568965823268,
+	"last_scraped": 1568971075497,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561468558289
 		}
 	],
-	"next_scrape": 1569009238801,
+	"next_scrape": 1569016602480,
 	"category": "coin_flipper",
-	"last_update": 1568965823268,
+	"last_update": 1568971075497,
 	"output": [
 		{
 			"args": {},
-			"calls": 2093508,
+			"calls": 2114000,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ERROR",
@@ -68,8 +68,8 @@
 			]
 		}
 	],
-	"updt": 1568960767328,
-	"edit": 209,
+	"updt": 1568965952153,
+	"edit": 210,
 	"identified": [
 		{
 			"document": "Essence",
