--- a/uknown_dk37v3.npcs.json
+++ b/uknown_dk37v3.npcs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_dk37v3.npcs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_dk37v3.npcs",
 	"sector": "SPC_4016",
 	"sec_level": 4,
 	"date_added": 1566817634405,
-	"last_scraped": 1568971586516,
+	"last_scraped": 1568971627525,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1569015142262,
+	"next_scrape": 1569016945687,
 	"category": "plant_sim",
-	"last_update": 1568971586516,
+	"last_update": 1568971627525,
 	"output": [
 		{
 			"args": {},
@@ -104,7 +104,7 @@
 		},
 		{
 			"args": {},
-			"calls": 24942,
+			"calls": 26104,
 			"base": "c:\"mgvlps\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã\n                ÁÃ\n                ",
 			"fragments": [
 				"cks o",
@@ -127,6 +127,6 @@
 			]
 		}
 	],
-	"updt": 1568966851861,
-	"edit": 150
+	"updt": 1568971591032,
+	"edit": 151
 }
