--- a/unknown_tffux6.db.json
+++ b/unknown_tffux6.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_tffux6.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_tffux6.db",
 	"sector": "K_6458",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566124296849
+		},
+		{
+			"type": "died",
+			"when": 1568975019098
 		}
 	],
 	"next_scrape": 1568938419097,
@@ -60,6 +64,6 @@
 			]
 		}
 	],
-	"updt": 1568890396700,
-	"edit": 102
+	"updt": 1568897388567,
+	"edit": 103
 }
