--- a/unknown_tffux6.random.json
+++ b/unknown_tffux6.random.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_tffux6.random",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_tffux6.random",
 	"sector": "SPC_2500",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563097327765
+		},
+		{
+			"type": "died",
+			"when": 1568974988895
 		}
 	],
 	"next_scrape": 1569013868671,
@@ -69,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1568965725899,
-	"edit": 245
+	"updt": 1568970913502,
+	"edit": 246
 }
