--- a/unknown_nipj21.t2_experimental.json
+++ b/unknown_nipj21.t2_experimental.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_nipj21.t2_experimental",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_nipj21.t2_experimental",
 	"sector": "K_4792",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1561403525545
+		},
+		{
+			"type": "died",
+			"when": 1568979172466
 		}
 	],
-	"updt": 1568768761800,
-	"edit": 295,
+	"updt": 1568792676794,
+	"edit": 296,
 	"next_scrape": 1568833768778,
 	"category": "coin_flipper",
 	"last_update": 1568792635068,
