--- a/unknown_ai25zc.roulette.json
+++ b/unknown_ai25zc.roulette.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ai25zc.roulette",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ai25zc.roulette",
 	"sector": "HJG_6175",
 	"sec_level": 4,
 	"date_added": 1560744178432,
-	"last_scraped": 1568975065974,
+	"last_scraped": 1568979895712,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560744178432
 		}
 	],
-	"next_scrape": 1569018318000,
+	"next_scrape": 1569023286279,
 	"category": "coin_flipper",
-	"last_update": 1568975065974,
+	"last_update": 1568979895712,
 	"output": [
 		{
 			"args": {},
-			"calls": 2480157,
+			"calls": 2489658,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"I hop",
@@ -99,8 +99,8 @@
 			]
 		}
 	],
-	"updt": 1568970237602,
-	"edit": 237,
+	"updt": 1568975195988,
+	"edit": 238,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
