--- a/uknown_vcd79v.sandstorm.json
+++ b/uknown_vcd79v.sandstorm.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_vcd79v.sandstorm",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_vcd79v.sandstorm",
 	"sector": "K_7717",
 	"sec_level": 4,
 	"date_added": 1560967082883,
-	"last_scraped": 1568975770053,
+	"last_scraped": 1568980719846,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560967082883
 		}
 	],
-	"next_scrape": 1569022448220,
+	"next_scrape": 1569026300142,
 	"category": "dice_roller",
-	"last_update": 1568975770053,
+	"last_update": 1568980719846,
 	"output": [
 		{
 			"args": {},
-			"calls": 3015957,
+			"calls": 3019281,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				" they",
@@ -74,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1568971139239,
-	"edit": 300,
+	"updt": 1568975873484,
+	"edit": 301,
 	"identified": [
 		{
 			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
