--- a/uknown_b23kas.com.json
+++ b/uknown_b23kas.com.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_b23kas.com",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_b23kas.com",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1565099817917,
-	"last_scraped": 1568977407236,
+	"last_scraped": 1568982197977,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565099817917
 		}
 	],
-	"next_scrape": 1569020750446,
+	"next_scrape": 1569024505316,
 	"category": "coin_flipper",
-	"last_update": 1568977407236,
+	"last_update": 1568982197977,
 	"output": [
 		{
 			"args": {},
-			"calls": 2063842,
+			"calls": 2077533,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"to for",
@@ -57,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1568972716171,
-	"edit": 207
+	"updt": 1568982189888,
+	"edit": 209
 }
