--- a/uknown_ewk6vx.libdb.json
+++ b/uknown_ewk6vx.libdb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ewk6vx.libdb",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ewk6vx.libdb",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566226212198,
-	"last_scraped": 1568985985076,
+	"last_scraped": 1568990640063,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1569025769408,
+	"next_scrape": 1569033963090,
 	"category": "coin_flipper",
-	"last_update": 1568985985076,
+	"last_update": 1568990640063,
 	"output": [
 		{
 			"args": {},
-			"calls": 1513705,
+			"calls": 1527090,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y tak",
@@ -153,6 +153,6 @@
 			]
 		}
 	],
-	"updt": 1568981514380,
-	"edit": 175
+	"updt": 1568986025355,
+	"edit": 176
 }
