--- a/uknown_vdw6b9.gallery.json
+++ b/uknown_vdw6b9.gallery.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_vdw6b9.gallery",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_vdw6b9.gallery",
 	"sector": "NGC_4554",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562817977792
+		},
+		{
+			"type": "died",
+			"when": 1568991518377
 		}
 	],
 	"next_scrape": 1568755709865,
@@ -152,8 +156,8 @@
 			]
 		}
 	],
-	"updt": 1568693411804,
-	"edit": 27,
+	"updt": 1568714164844,
+	"edit": 28,
 	"retry_args": [
 		{
 			"CLICK": true
