--- a/uknown_9zvqnm.riot.json
+++ b/uknown_9zvqnm.riot.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_9zvqnm.riot",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_9zvqnm.riot",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565391280951,
-	"last_scraped": 1568998041040,
+	"last_scraped": 1569002503599,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565391280951
 		}
 	],
-	"next_scrape": 1569044695084,
+	"next_scrape": 1569045838157,
 	"category": "dice_roller",
-	"last_update": 1568998041040,
+	"last_update": 1569002503599,
 	"output": [
 		{
 			"args": {},
-			"calls": 538297,
+			"calls": 549675,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"9 We ",
@@ -46,8 +46,8 @@
 			]
 		}
 	],
-	"updt": 1568993738281,
-	"edit": 52,
+	"updt": 1568998251590,
+	"edit": 53,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
