--- a/uknown_zfq3ba.solver.json
+++ b/uknown_zfq3ba.solver.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_zfq3ba.solver",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_zfq3ba.solver",
 	"sector": "VNP_8704",
 	"sec_level": 4,
 	"date_added": 1566693077835,
-	"last_scraped": 1568998683855,
+	"last_scraped": 1569003124997,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566693077835
 		}
 	],
-	"next_scrape": 1569040896028,
+	"next_scrape": 1569048801254,
 	"category": "coin_flipper",
-	"last_update": 1568998683855,
+	"last_update": 1569003124997,
 	"output": [
 		{
 			"args": {},
-			"calls": 1427659,
+			"calls": 1439231,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ieve ",
@@ -75,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1568994414607,
-	"edit": 122
+	"updt": 1568998703125,
+	"edit": 123
 }
