--- a/uknown_ayqcsi.accnt.json
+++ b/uknown_ayqcsi.accnt.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_ayqcsi.accnt",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_ayqcsi.accnt",
 	"sector": "NGC_0709",
 	"sec_level": 4,
@@ -19,10 +19,14 @@
 				"from": "NGC_0709",
 				"to": "K_7766"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569016689487
+		}
 	],
-	"updt": 1568733846337,
-	"edit": 171,
+	"updt": 1568747829023,
+	"edit": 172,
 	"output": [
 		{
 			"args": {},
