--- a/uknown_ayqcsi.riot.json
+++ b/uknown_ayqcsi.riot.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_ayqcsi.riot",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_ayqcsi.riot",
 	"sector": "NGC_0709",
 	"sec_level": 4,
@@ -23,10 +23,14 @@
 				"from": "NGC_0709",
 				"to": "VNP_6240"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569016689487
+		}
 	],
-	"updt": 1568760641987,
-	"edit": 219,
+	"updt": 1568783425161,
+	"edit": 220,
 	"output": [
 		{
 			"args": {},
