--- a/unknown_eeoywq.echelon_mirror_13.json
+++ b/unknown_eeoywq.echelon_mirror_13.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_eeoywq.echelon_mirror_13",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_eeoywq.echelon_mirror_13",
 	"sector": "VNP_0345",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562509686488
+		},
+		{
+			"type": "died",
+			"when": 1569016590420
 		}
 	],
 	"next_scrape": 1568739131300,
@@ -128,6 +132,6 @@
 			]
 		}
 	],
-	"updt": 1567727583481,
-	"edit": 21
+	"updt": 1568692510484,
+	"edit": 22
 }
