--- a/uknown_v7696u.cl.json
+++ b/uknown_v7696u.cl.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_v7696u.cl",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_v7696u.cl",
 	"sector": "HJG_4597",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560847900813
+		},
+		{
+			"type": "died",
+			"when": 1569017059041
 		}
 	],
 	"next_scrape": 1568737502718,
@@ -160,8 +164,8 @@
 			]
 		}
 	],
-	"updt": 1567720582581,
-	"edit": 91,
+	"updt": 1568691833549,
+	"edit": 92,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
