--- a/unknown_h6yxmz.h0_key.json
+++ b/unknown_h6yxmz.h0_key.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_h6yxmz.h0_key",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_h6yxmz.h0_key",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566878677364,
-	"last_scraped": 1569017168122,
+	"last_scraped": 1569020973495,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566878677364
 		}
 	],
-	"next_scrape": 1569062325112,
+	"next_scrape": 1569067132171,
 	"category": "plant_sim",
-	"last_update": 1569017168122,
+	"last_update": 1569020973495,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 134765,
+			"calls": 135933,
 			"base": "c:\"1wseae\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"rajbh",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1569013358715,
-	"edit": 160
+	"updt": 1569017188010,
+	"edit": 161
 }
