--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1569020599762,
+	"last_scraped": 1569024528041,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1569066978203,
+	"next_scrape": 1569071220564,
 	"category": "plant_sim",
-	"last_update": 1569020599762,
+	"last_update": 1569024528041,
 	"output": [
 		{
 			"args": {},
@@ -263,6 +263,23 @@
 				"ld bring",
 				", impres"
 			]
+		},
+		{
+			"args": {},
+			"calls": 2010,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n           \n           Á      ,\n            Ã  ÁÁ Á ÁÁ.\n           ÁÁÁÃ\\ÃÁ/ÁÃÁ)Á\n           ÁÁ. \\ÃÁÁÃ/Á.\n           ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -287,6 +304,6 @@
 			]
 		}
 	],
-	"updt": 1569016961838,
-	"edit": 107
+	"updt": 1569020796704,
+	"edit": 108
 }
