--- a/uknown_r9elib.script.json
+++ b/uknown_r9elib.script.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_r9elib.script",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_r9elib.script",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561385143168,
-	"last_scraped": 1569025022122,
+	"last_scraped": 1569029112867,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561385143168
 		}
 	],
-	"next_scrape": 1569064638892,
+	"next_scrape": 1569073927757,
 	"category": "coin_flipper",
-	"last_update": 1569025022122,
+	"last_update": 1569029112867,
 	"output": [
 		{
 			"args": {},
-			"calls": 5141919,
+			"calls": 5149213,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"oice:",
@@ -76,8 +76,8 @@
 			]
 		}
 	],
-	"updt": 1569021248815,
-	"edit": 479,
+	"updt": 1569025085389,
+	"edit": 480,
 	"identified": [
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
