--- a/unknown_w804en.echelon_mirror_11.json
+++ b/unknown_w804en.echelon_mirror_11.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_w804en.echelon_mirror_11",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_w804en.echelon_mirror_11",
 	"sector": "HJG_5959",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561843770750
+		},
+		{
+			"type": "died",
+			"when": 1569032421778
 		}
 	],
 	"next_scrape": 1568798110545,
@@ -149,8 +153,8 @@
 			]
 		}
 	],
-	"updt": 1568744444074,
-	"edit": 70,
+	"updt": 1568756808168,
+	"edit": 71,
 	"retry_args": [
 		{
 			"CLICK": true
