--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -1,27 +1,27 @@
 {
 	"_id": "abndnd_nowjtq.hk_auction_house",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abndnd_nowjtq.hk_auction_house",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563098745814,
-	"last_scraped": 1569038837931,
+	"last_scraped": 1569042773325,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563098745814
 		}
 	],
-	"updt": 1569035458977,
-	"edit": 129,
-	"next_scrape": 1569081814547,
+	"updt": 1569038848531,
+	"edit": 130,
+	"next_scrape": 1569084333333,
 	"category": "dice_roller",
-	"last_update": 1569038837931,
+	"last_update": 1569042773325,
 	"output": [
 		{
 			"args": {},
-			"calls": 1373864,
+			"calls": 1387099,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s the",
