--- a/unknown_csa049.t3dbscrape.json
+++ b/unknown_csa049.t3dbscrape.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_csa049.t3dbscrape",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_csa049.t3dbscrape",
 	"sector": "K_1812",
 	"sec_level": 4,
 	"date_added": 1566509977003,
-	"last_scraped": 1569039390917,
+	"last_scraped": 1569043393508,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566509977003
 		}
 	],
-	"next_scrape": 1569085168056,
+	"next_scrape": 1569086396437,
 	"category": "dice_roller",
-	"last_update": 1569039390917,
+	"last_update": 1569043393508,
 	"output": [
 		{
 			"args": {},
-			"calls": 1602719,
+			"calls": 1619768,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"hank ",
@@ -51,6 +51,6 @@
 			]
 		}
 	],
-	"updt": 1569035912869,
-	"edit": 157
+	"updt": 1569039523703,
+	"edit": 158
 }
